Improved signon code and header account icon functionality.

--- a/src/main/resources/static/styles/account.scss
+++ b/src/main/resources/static/styles/account.scss
@@ -84,6 +84,7 @@
   #account-setting-panels {
 
     @import 'account/accountfields';
+    @import 'account/ratingtiles';
 
     flex-grow: 6;
     height: 100%;
