--- a/src/main/resources/static/styles/account.css
+++ b/src/main/resources/static/styles/account.css
@@ -126,24 +126,24 @@ body {
   background: #EEEEEE;
 }
 
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.3em;
 }
 
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: transparent;
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: #00B837;
   border-radius: 0.15em;
 }
 
-::-webkit-resizer {
+*::-webkit-resizer {
   display: none;
 }
 
-::-webkit-scrollbar-button {
+*::-webkit-scrollbar-button {
   display: none;
 }
 
@@ -371,6 +371,11 @@ body {
   color: #EEEEEE;
   transition: color 1s ease-in-out;
   width: 150%;
+}
+#site-content #account-setting-panels #rating-scrollable {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 #site-content #account-setting-panels .setting-panel {
   position: absolute;
