--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -128,19 +128,19 @@ body {
 }
 
 
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.3em;
 }
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: transparent;
 }
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: $accent;
   border-radius: 0.15em;
 }
-::-webkit-resizer {
+*::-webkit-resizer {
   display: none;
 }
-::-webkit-scrollbar-button {
+*::-webkit-scrollbar-button {
   display: none;
 }
