--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -160,9 +160,25 @@
 
 
     <div id="finalize-order-container" style="display: none;">
-        <h1>Thanks for shopping with us!</h1>
-        <h3>Your order is being prepared.</h3>
-        <div><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
+        <div id="final-order-info-display">
+            <h1>Thanks for shopping with us!</h1>
+            <h3>Your order is being prepared.</h3>
+            <div><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
+        </div>
+        <div id="general-rating-panel">
+            <h4>Rate Your Experience</h4>
+            <div id="gen-rating-selection" class="rating-container" data-chosenrating="null">
+                <i class="fa-solid fa-star rate-star-icon" data-rating="1" onclick="generalRating(this);"></i>
+                <i class="fa-solid fa-star rate-star-icon" data-rating="2" onclick="generalRating(this);"></i>
+                <i class="fa-solid fa-star rate-star-icon" data-rating="3" onclick="generalRating(this);"></i>
+                <i class="fa-solid fa-star rate-star-icon" data-rating="4" onclick="generalRating(this);"></i>
+                <i class="fa-solid fa-star rate-star-icon" data-rating="5" onclick="generalRating(this);"></i>
+            </div>
+        </div>
+        <div id="order-review-panel" th:if="${!account.equals('noaccount')}">
+            <i class="fa-solid fa-arrow-down fa-beat"></i>
+            <button>Send Feedback</button>
+        </div>
     </div>
 </div>
 
