--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -38,18 +38,18 @@
 <div id="signon-content">
 
     <div id="toggle-signon-mode">
-        <h3>Sign Up</h3>
+        <h3>Sign In</h3>
         <label id="signon-switch-label">
             <input type="checkbox" id="signon-switch-input">
             <span id="signon-switch"></span>
         </label>
-        <h3>Sign In</h3>
+        <h3>Sign Up</h3>
     </div>
 
 
     <div id="signon-container">
-        <h2 id="signon-header">Sign Up With Us!</h2>
-        <p id="signon-text">Creating an account with us allows you to earn rewards, create meal plans, and streamline future orders!</p>
+        <h2 id="signon-header">Sign In</h2>
+        <p id="signon-text">Sign in to your account to dramatically improve your shopping experience with us!</p>
         <div id="signon-name-container" class="signon-container">
             <label id="signon-name-label" class="label-signon">
                 Full Name
@@ -66,9 +66,9 @@
             <label id="signon-password-label" class="label-signon">
                 Password
             </label>
-            <input type="password" id="signon-password-input" autocomplete="new-password">
+            <input type="password" id="signon-password-input" autocomplete="current-password">
         </div>
-        <button id="signon-button">Sign Up</button>
+        <button id="signon-button">Sign In</button>
     </div>
 
 
