--- a/src/main/resources/static/styles/account.css
+++ b/src/main/resources/static/styles/account.css
@@ -374,8 +374,33 @@ body {
 }
 #site-content #account-setting-panels #rating-scrollable {
   width: 100%;
-  height: 100%;
+  height: 80vh;
   overflow-y: scroll;
+  padding: 5vh 1em;
+  display: flex;
+  flex-flow: column;
+  gap: 2vh;
+}
+#site-content #account-setting-panels #rating-scrollable .rating-tile {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: auto;
+}
+#site-content #account-setting-panels #rating-scrollable .rating-tile .rating-info-left {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+  flex: 1 1 0px;
+}
+#site-content #account-setting-panels #rating-scrollable .rating-tile .rating-message {
+  flex: 1 1 0px;
+  padding: 0.5em;
+  overflow-wrap: break-word;
+  text-align: center;
 }
 #site-content #account-setting-panels .setting-panel {
   position: absolute;
