--- a/src/main/resources/static/styles/account/ratingtiles.scss
+++ b/src/main/resources/static/styles/account/ratingtiles.scss
@@ -1,5 +1,32 @@
 #rating-scrollable {
   width: 100%;
-  height: 100%;
+  height: 80vh;
   overflow-y: scroll;
+  padding: 5vh 1em;
+  display: flex;
+  flex-flow: column;
+  //align-items: center;
+  //justify-content: center;
+  gap: 2vh;
+  .rating-tile {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    .rating-info-left {
+      display: flex;
+      flex-flow: column;
+      justify-content: space-evenly;
+      align-items: center;
+      flex: 1 1 0px;
+    }
+    .rating-message {
+      flex: 1 1 0px;
+      padding: 0.5em;
+      overflow-wrap: break-word;
+      text-align: center;
+    }
+  }
 }
